layout fix so data is visible on mobile

--- a/src/base/css/pages/slider.css
+++ b/src/base/css/pages/slider.css
@@ -5,7 +5,6 @@ Styles for the model slider range
     height: 24px;
     padding-top : 10px;
     z-index : 100;
-    margin: auto;
 }
   
 input[type=range] {
